fixed footer taking too much space

--- a/public/style.css
+++ b/public/style.css
@@ -92,8 +92,6 @@ input {
     position: fixed;
     left: 0;
     bottom: 0;
-    width: 100%;
-    color: white;
     text-align: left;
     z-index: 2;
 }
